NetBSD Problem Report #50904

From www@NetBSD.org  Mon Mar  7 10:18:50 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 93CB77ABDC
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  7 Mar 2016 10:18:50 +0000 (UTC)
Message-Id: <20160307101849.732807ACA2@mollari.NetBSD.org>
Date: Mon,  7 Mar 2016 10:18:49 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Fix variable assignment inside if-clause.
X-Send-Pr-Version: www-1.0

>Number:         50904
>Category:       kern
>Synopsis:       Fix variable assignment inside if-clause.
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Mar 07 10:20:00 +0000 2016
>Closed-Date:    Tue Mar 08 09:56:28 +0000 2016
>Last-Modified:  Tue Mar 08 09:56:28 +0000 2016
>Originator:     Henning Petersen
>Release:        -current
>Organization:
>Environment:
>Description:
Fix variable assignment inside if-clause.
>How-To-Repeat:

>Fix:
diff -u -p -r1.25 if_smsc.c
--- sys/dev/usb/if_smsc.c	9 Feb 2016 08:32:12 -0000	1.25
+++ sys/dev/usb/if_smsc.c	7 Mar 2016 09:46:15 -0000
@@ -772,7 +772,7 @@ smsc_chip_init(struct smsc_softc *sc)
 	smsc_write_reg(sc, SMSC_PM_CTRL, SMSC_PM_CTRL_PHY_RST);

 	if ((err = smsc_wait_for_bits(sc, SMSC_PM_CTRL,
-	    SMSC_PM_CTRL_PHY_RST) != 0)) {
+	    SMSC_PM_CTRL_PHY_RST)) != 0) {
 		smsc_warn_printf(sc, "timed-out waiting for phy reset to "
 		    "complete\n");
 		goto init_failed;

>Release-Note:

>Audit-Trail:
From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50904 CVS commit: src/sys/dev/usb
Date: Mon, 7 Mar 2016 10:52:17 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Mon Mar  7 10:52:17 UTC 2016

 Modified Files:
 	src/sys/dev/usb: if_smsc.c

 Log Message:
 PR/50904: Fix variable assignment inside if-clause.


 To generate a diff of this commit:
 cvs rdiff -u -r1.25 -r1.26 src/sys/dev/usb/if_smsc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Mon, 07 Mar 2016 16:12:55 +0000
State-Changed-Why:
[pullup-7 #1135] smsc(4) fix Fwd: CVS commit: src/sys/dev/usb


From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50904 CVS commit: [netbsd-7] src/sys/dev/usb
Date: Tue, 8 Mar 2016 09:52:40 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Tue Mar  8 09:52:39 UTC 2016

 Modified Files:
 	src/sys/dev/usb [netbsd-7]: if_smsc.c

 Log Message:
 Pull up following revision(s) (requested by skrll in ticket #1135):
 	sys/dev/usb/if_smsc.c: revision 1.26
 PR/50904: Fix variable assignment inside if-clause.


 To generate a diff of this commit:
 cvs rdiff -u -r1.19.2.1 -r1.19.2.2 src/sys/dev/usb/if_smsc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Tue, 08 Mar 2016 09:56:28 +0000
State-Changed-Why:
pullup done


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.