PR/50904: Fix variable assignment inside if-clause.